# anorency

./: .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
doc/: actor-system-design.md  build.md  dev_log.md  mem_pool_dev_log.md  mem_pool_v2_dev_log.md  os_util.md  std.md  test.md
google_benchmarks/: CMakeLists.txt  benchmarks.cpp
google_tests/: CMakeLists.txt  tests.cpp
include/Anon/: Actor.h  Actor.inl  Address.h  Alias.h  Dispatcher.h  Dispatcher.inl  Interface.h  Interface.inl  MemPool.h  MemPool.inl  Message.h  Message.inl  Stage.h  Stage.inl  Stream.h  Stream.inl  Types.h  Version.h
include/Anorency/Messages/: Message.h  Message.inl  MessageWrappers.h
include/Anorency/Streams/: Stream.h  Stream.inl
include/Anorency/Types/: Types.h
include/Messages/: Message.h  Message.inl  MessageHelpers.h
include/Pools/: MemPool.h
include/Streams/: Stream.h  Stream.inl
include/Types/: Alias.h  types.h
include/info/: version.h
include/interfaces/: mem_pool_wrapper.h
include/util/: os_util.h
src/: All.cpp  AnoAgent.h  AnoEnvironment.cpp  AnoEnvironment.h  AnoInterface.cpp  AnoInterface.h  AnoThread.h  AnoType.h  Flags.h  Types.h  main.cpp  test.cpp  version.cpp
src/AnoAgent/: AnoAgent.cpp  AnoAgent.h
src/AnoEnvironment/: AnoEnvironment.cpp  AnoEnvironment.h
src/AnoExceptions/: AnoException.h
src/AnoTasks/: AnoTaskDefault.cpp  AnoTaskDefault.h
src/Environment/: Environment.cpp  Environment.h
src/Exceptions/: AnoException.h
src/Interfaces/: IAnoEnvironment.h  IAnoTask.h
src/Lines/: Aggregator.h  Line.h
src/Stream/: Aggregator.cpp  Aggregator.h  Stream.h
src/Streams/: Stream.cpp
src/info/: version.cpp
src/interfaces/: AnoEnvironmentInterface.h  AnoTaskInterface.h
src/util/: os_util.cpp
tests/: tests.cpp
